k8s/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniboard-app
spec: # spec for deployment
  selector:
    matchLabels:
      run: miniboard-app
  replicas: 4
  template: # blueprint for pods
    metadata:
      labels:
        run: miniboard-app # service looks for this label
    spec: # spec for pods
      securityContext:
        fsGroup: 82 # www-data GID on alpine
      containers:
      - name: miniboard-app
        image: ghcr.io/minilauta/miniboard/app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          # NOTE: adjust limits specifically for your environment
          # limits:
          #   memory: 4096Mi
        volumeMounts:
        - name: miniboard-app-pv
          mountPath: /app/public/src
        - name: miniboard-app-config
          mountPath: /app/src/common/config.php
          subPath: config.php
      volumes:
      - name: miniboard-app-pv
        persistentVolumeClaim:
          claimName: miniboard-app-pv-claim
      - name: miniboard-app-config
        configMap:
          name: miniboard-app-config
          items:
          - key: config.php
            path: config.php

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniboard-nginx
spec:
  selector:
    matchLabels:
      run: miniboard-nginx
  replicas: 2
  template:
    metadata:
      labels:
        run: miniboard-nginx
    spec:
      containers:
      - name: miniboard-nginx
        image: ghcr.io/minilauta/miniboard/nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        - containerPort: 443
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          # NOTE: adjust limits specifically for your environment
          # limits:
          #   memory: 512Mi
        volumeMounts:
        - name: miniboard-nginx-pv
          mountPath: /app/public/src
          readOnly: true
      volumes:
      - name: miniboard-nginx-pv
        persistentVolumeClaim:
          claimName: miniboard-app-pv-claim
          readOnly: true

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniboard-csam-scanner
spec:
  selector:
    matchLabels:
      run: miniboard-csam-scanner
  replicas: 1
  template:
    metadata:
      labels:
        run: miniboard-csam-scanner
    spec:
      containers:
      - name: miniboard-csam-scanner
        image: ghcr.io/minilauta/miniboard/csam-scanner:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 100m
            memory: 1024Mi
          # NOTE: adjust limits specifically for your environment
          # limits:
          #   memory: 4096Mi
