k8s/statefulsets.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: miniboard-mariadb
spec: # spec for stateful set
  selector:
    matchLabels:
      run: miniboard-mariadb
  serviceName: miniboard-mariadb
  replicas: 1
  template: # blueprint for pods
    metadata:
      labels:
        run: miniboard-mariadb # service looks for this label
    spec: # spec for pods
      containers:
      - name: miniboard-mariadb
        image: mariadb:10.6
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: [ALL]
            add: [SETUID, SETGID, CHOWN, FOWNER, DAC_OVERRIDE]
        ports:
        - containerPort: 3306
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          # NOTE: adjust limits specifically for your environment
          # limits:
          #   memory: 8192Mi
        volumeMounts:
        - name: miniboard-mariadb-pv
          mountPath: /var/lib/mysql
      volumes:
      - name: miniboard-mariadb-pv
        persistentVolumeClaim:
          claimName: miniboard-mariadb-pv-claim
  volumeClaimTemplates:
  - metadata:
      name: miniboard-mariadb-pv
    spec:
      # storageClassName: ssd-hostpath
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 128M

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: miniboard-redis
spec: # spec for stateful set
  selector:
    matchLabels:
      run: miniboard-redis
  serviceName: miniboard-redis
  replicas: 1
  template: # blueprint for pods
    metadata:
      labels:
        run: miniboard-redis # service looks for this label
    spec: # spec for pods
      containers:
      - name: miniboard-redis
        image: redis:7.0-alpine
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop: [ALL]
        args: ["--save 60 1", "--loglevel verbose", "--requirepass $(REDIS_PASS)"]
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            memory: 1024Mi
        volumeMounts:
        - name: miniboard-redis-pv
          mountPath: /data
      volumes:
      - name: miniboard-redis-pv
        persistentVolumeClaim:
          claimName: miniboard-redis-pv-claim
  volumeClaimTemplates:
  - metadata:
      name: miniboard-redis-pv
    spec:
      # storageClassName: ssd-hostpath
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 128M
