k8s/services.yml
apiVersion: v1
kind: Service
metadata:
  name: miniboard-mariadb
  labels:
    run: miniboard-mariadb
spec:
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
    name: mysql
  clusterIP: None
  selector:
    run: miniboard-mariadb

---
apiVersion: v1
kind: Service
metadata:
  name: miniboard-redis
  labels:
    run: miniboard-redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
    name: redis
  clusterIP: None
  selector:
    run: miniboard-redis

---
apiVersion: v1
kind: Service
metadata:
  name: miniboard-app
  labels:
    run: miniboard-app
spec:
  type: ClusterIP
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: fpm
  selector:
    run: miniboard-app

---
apiVersion: v1
kind: Service
metadata:
  name: miniboard-nginx
  labels:
    run: miniboard-nginx
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    run: miniboard-nginx

---
apiVersion: v1
kind: Service
metadata:
  name: miniboard-csam-scanner
  labels:
    run: miniboard-csam-scanner
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    run: miniboard-csam-scanner
